--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             </form>
             <div id="carta">
                 <h3 id="nome-carta"></h3>
+                <p id="valor-carta"></p>
+                <p id="tipo-carta"></p>
+                <p id="meaning-up-carta"></p>
+                <p id="meaning-rev-carta"></p>
                 <p id="descricao-carta"></p>
             </div>
         </main>
