--- a/index.html
+++ b/index.html
@@ -37,16 +37,10 @@
  <div id="listar-cartas-modal">
         <main>
             <button id="fechar-modal" onclick="fecharModalListar()">Fechar</button>
-            <h2>Tarot Mágico</h2>
-
-            <div id="carta">
-                <h3 id="nome-carta">Name: </h3>
-                <p id="valor-carta">Value: </p>
-                <p id="tipo-carta">Arcan: </p>
-                <p id="meaning-up-carta">Meaning Up: </p>
-                <p id="meaning-rev-carta">Meaning rev: </p>
-                <p id="descricao-carta">Description: </p>
+            <h2>Cartas Magicas</h2>
+            <div id="cartas">
             </div>
+            
         </main>
     </div>
 </html>
