--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
         </div>
     </main>
 </div>
+<div id="atualizar-cartas-modal">
+    <main>
+        <button id="fechar-modal2" onclick="fecharModalAtualizar()">Fechar</button>
+        <h2>Atualize suas castas Magicas</h2>
+        <div id="carta">
+            <h3 id="nome-carta"></h3>
+            <p id="valor-carta"></p>
+            <p id="tipo-carta"></p>
+            <p id="meaning-up-carta"></p>
+            <p id="meaning-rev-carta"></p>
+            <p id="descricao-carta"></p>
+        </div>
+    </main>
+</div>
 
 
 </html>
