--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div id="jogar-cartas-modal">
     <main>
         <button id="fechar-modal" onclick="fecharModalJogar()">Fechar</button>
-        <h2>Tarot Mágico</h2>
+        <h2>Magic Tarot</h2>
         <form onsubmit="jogarTarot(event)">
             <label for="nome">Nome ou apelido:</label>
             <input type="text" id="nome" name="nome" required>
@@ -39,7 +39,7 @@
 <div id="listar-cartas-modal">
     <main>
         <button id="fechar-modal" onclick="fecharModalListar()">Fechar</button>
-        <h2>Cartas Magicas</h2>
+        <h2>Magic Cards</h2>
         <div id="cartas">
         </div>
     </main>
@@ -47,17 +47,14 @@
 <div id="atualizar-cartas-modal">
     <main>
         <button id="fechar-modal2" onclick="fecharModalAtualizar()">Fechar</button>
-        <h2>Atualize suas castas Magicas</h2>
+        <h2>Update Your Magic Cards</h2>
         <div id="carta">
-            <h3 id="nome-carta"></h3>
-            <p id="valor-carta"></p>
-            <p id="tipo-carta"></p>
-            <p id="meaning-up-carta"></p>
-            <p id="meaning-rev-carta"></p>
-            <p id="descricao-carta"></p>
+            <h3 id="nome-carta1"></h3>
+            <p id="tipo-carta1"></p>
+            <p id="meaning-up-carta1"></p>
+            <p id="meaning-rev-carta1"></p>
+            <p id="descricao-carta1"></p>
         </div>
     </main>
 </div>
-
-
 </html>
