--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
     <main>
         <button id="fechar-modal2" onclick="fecharModalAtualizar()">Fechar</button>
         <h2>Update Your Magic Cards</h2>
-        <div id="carta">
-            <h3 id="nome-carta1"></h3>
-            <p id="tipo-carta1"></p>
-            <p id="meaning-up-carta1"></p>
-            <p id="meaning-rev-carta1"></p>
-            <p id="descricao-carta1"></p>
+        <div id="carta1">
+            <p id="nome-carta1" ></p>
+            <p id="tipo-carta1" ></p>
+            <p id="meaning-up-carta1" contenteditable="true"></p>
+            <p id="meaning-rev-carta1" contenteditable="true"></p>
+            <p id="descricao-carta1" contenteditable="true"></p>
+            <button id="button3" onclick="atualizarCartas(event)">Salvar</button>
         </div>
     </main>
 </div>
