--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>Jogue o Tarô Mágico!</h1>
-        <button id="button1" onclick="openModalJogar()">Jogar Tarô</button>
-        <button id="button2" onclick="openModalListar()">Listar cartas</button>
-        <img class="illustration" src="./img/logo.png" alt="Ilustração de cartas de tarô">
-    </div>
+        <header>
+            
+        </header>
+        <main class="container">
+            <h1>Jogue o Tarô Mágico!</h1>
+            <button id="button1" onclick="openModalJogar()">Jogar Tarô</button>
+            <button id="button2" onclick="openModalListar()">Listar cartas</button>
+            <img class="illustration" src="./img/logo.png" alt="Ilustração de cartas de tarô">
+        </main>
+        <footer></footer>
+    </main>
+    <footer></footer>
+    
 </body>
 <div id="jogar-cartas-modal">
     <main>
