--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <p id="meaning-rev-carta1" contenteditable="true"></p>
             <p id="descricao-carta1" contenteditable="true"></p>
             <button id="button3" onclick="atualizarCartas(event)">Salvar</button>
+            <button id="button4" onclick="excluirCarta(event)">Excluir</button>
         </div>
     </main>
 </div>
