--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
 <body>
         <header>
-            <h1>Jogue o Tarô Mágico!</h1>
+            <h1>Magic Tarot</h1>
         </header>
         <main class="container">
             <img class="illustration" src="./img/logo.png" alt="Ilustração de cartas de tarô">
-            <button id="button1" onclick="openModalJogar()">Jogar Tarô</button>
-            <button id="button2" onclick="openModalListar()">Listar cartas</button>
+            <button id="button1" onclick="openModalJogar()">Play</button>
+            <button id="button2" onclick="openModalListar()">Cards</button>
+            <button id="button2" onclick="openModalListar()">Deck</button>
         </main>
         <footer></footer>
     </main>
