--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <button id="fechar-modal" onclick="fecharModalJogar()">Fechar</button>
             <h2>Magic Tarot</h2>
             <form onsubmit="jogarTarot(event)">
-                <label for="nome">Nome ou apelido:</label>
-                <input type="text" id="nome" name="nome" required>
-                <button type="submit">Tirar carta</button>
+                <label for="nome"> Enter your nickname, take a breath, stop for 5 seconds, reflect what question you want to ask and get your response in the card:</label>
+                <input type="text" id="nome" name="nome" required placeholder="Enter your nickname">
+                <button type="submit">Take your card</button>
             </form>
             <div id="carta">
                 <h3 id="nome-carta"></h3>
